# chatGPT-c-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cGPT.h
src/: cGPT.c  main.c  makefile  test.c
